colored skill spans added

--- a/ahola_cv.html
+++ b/ahola_cv.html
@@ -118,14 +118,40 @@ Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu 
           
           </div>
       <div id="osaaminen"class="well osaaminen">
-          <h2 class="text-center">Osaaminen</h2>
-Koulutukseni ja oman harrastuneisuuteni takia IT-taidot ovat monipuolisesti hyvällä tasolla. Microsoft Office ohjelmia osaan käyttää hyvin ja muutkin perusjutut ovat hallussa.
+                    <h2 class="text-center">Osaaminen</h2>
+          <div class="row">
+              <div class="col-xs-5 col-md-4">
+                  <h3>Osatut kielet ja ohjelmat</h3>
+                  <div class="skills">
+              <p><span class="skill-good">Javascript</span>
+                  <span class="skill-good">HTML</span>
+                  <span class="skill-good">CSS</span>
+                  <span class="skill-good">jQuery</span>
+                  <span class="skill-good">Bootstrap</span>
+                  <span class="skill-mid">Git</span>
+                  <span class="skill-mid">XML</span>
+                  <span class="skill-mid">JSON</span>
+                  <span class="skill-mid">Java</span>
+                  <span class="skill-mid">SQL</span>
+                  <span class="skill-mid">MariaDB</span>
+                  <span class="skill-mid">Jira</span>
+                  <span class="skill-mid">ReactJS</span>
+                  <span class="skill-bad">C#</span></p>
+                      </div>
+              </div>
+              
+              <div class="col-xs-7 col-md-8">
 
-Koodauspuolella vahvuuteni on front-end puolella. Osaan tehdä responsiivisia nettisivustoja ja jQueryn käyttö on tuttua. Back-end puolella olen koodannut Javalla mm. tietokantaa käyttävän pizzeria-sovelluksen.
 
-Tietokantojen perusasiat osaan hyvin ja tietokannan suunnittelu ja luominen onnistuu hyvin
+                  <p>Koodauksessa vahvuuteni on front-end puolella. Teen sivustot aina responsiivisuutta ajatellen ja jQueryn käyttö on tuttua. Back-end puolella olen koodannut Javalla mm. tietokantaa käyttävän pizzeria-sovelluksen.</p>
+
+
+
+<p>Tietokantojen peruskomennot ovat hallussa ja osaan suunnitella tietokantoja.</p>
+                  <p>Koulutukseni ja oman harrastuneisuuteni takia IT-taidot ovat monipuolisesti hyvällä tasolla. Microsoft Office ohjelmia osaan käyttää hyvin ja muutkin perusjutut ovat hallussa.</p>
+                  </div>
       </div>
-
+</div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
