--- a/ahola_cv.html
+++ b/ahola_cv.html
@@ -253,7 +253,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h2 class="modal-title text-center" id="exampleModalLongTitle">Harton pizza</h2>
+        <h2 class="modal-title text-center" id="exampleModalLongTitle">Alkoholilaskuri</h2>
 
       </div>
       <div class="modal-body">
