--- a/ahola_cv.html
+++ b/ahola_cv.html
@@ -62,7 +62,8 @@
             <h3>Web-developer</h3>
                 <a target="_blank" href="https://www.linkedin.com/in/juha-ahola-862781101/"><img class="linkedin" alt="follow me on linkedin" src="img/linkedin.png" border=0></a>
                 <a target="_blank" href="https://github.com/ajuha"><img class="linkedin" alt="follow me on github" src="img/github.png" border=0></a>
-                <a target="_blank" href="https://www.youtube.com/channel/UCFHRsURzFFQLjnY-0CdN5Nw"><img class="linkedin" alt="follow me on youtube" src="img/youtube.png" border=0></a>
+                <!--<a target="_blank" href="https://www.youtube.com/channel/UCFHRsURzFFQLjnY-0CdN5Nw"><img class="linkedin" alt="follow me on youtube" src="img/youtube.png" border=0></a>
+                -->
                 </div>
 		</div>
       </div>
