--- a/ahola_cv.html
+++ b/ahola_cv.html
@@ -123,11 +123,11 @@
       </tr>
       <tr>
         <td>Yhteystiedot</td>
-        <td class="pull-right">Muusantori 5 A 18</td>
+        <td class="pull-right">Eteläinen Rautatiekatu 16 A b 32</td>
       </tr>
               <tr>
         <td></td>
-        <td class="pull-right">00350 Helsinki</td>
+        <td class="pull-right">00100 Helsinki</td>
       </tr>
         <tr>
         <td></td>
