added corona statistic page and judgement day page

--- a/ahola_cv.html
+++ b/ahola_cv.html
@@ -123,15 +123,7 @@
       </tr>
       <tr>
         <td>Yhteystiedot</td>
-        <td class="pull-right">Eteläinen Rautatiekatu 16 A b 32</td>
-      </tr>
-              <tr>
-        <td></td>
-        <td class="pull-right">00100 Helsinki</td>
-      </tr>
-        <tr>
-        <td></td>
-        <td class="pull-right">ahola.juha(at)hotmail.com</td>
+        <td class="pull-right">juha.ahola93(at)gmail.com</td>
       </tr>
         <tr>
         <td></td>
